Partie 2.5 : mise en place d'un fichier de base HTML et de style CSS

--- a/merchex/listings/templates/listings/about.html
+++ b/merchex/listings/templates/listings/about.html
@@ -1,7 +1,8 @@
-<html>
-    <head><title>Merchex</title></head>
-    <body>
+{% extends 'listings/base.html' %} <!-- Fait en sorte que ce template hérite du template de base -->
+
+{% block content %} <!-- Début du bloc qui sera ajouté à la base -->
+
         <h1>A propos</h1> 
         <p>Nous adorons merch !</p>
-    </body>
-</html>
+
+{% endblock %}
