--- a/merchex/listings/templates/listings/contact.html
+++ b/merchex/listings/templates/listings/contact.html
@@ -1,6 +1,7 @@
-<html>
-    <head><title>Merchex</title></head>
-    <body>
+{% extends 'listings/base.html' %} <!-- Fait en sorte que ce template hérite du template de base -->
+
+{% block content %} <!-- Début du bloc qui sera ajouté à la base -->
+
         <h1>Formulaire de contact</h1>
-    </body>
-</html>
+
+{% endblock %}
