--- a/merchex/listings/templates/listings/hello.html
+++ b/merchex/listings/templates/listings/hello.html
@@ -1,26 +1,27 @@
-<html>
-    <head><title>Merchex</title></head>
-    <body>
-        <h1>Hello Django !</h1>
+{% extends 'listings/base.html' %} <!-- Fait en sorte que ce template hérite du template de base -->
 
-        <p>Mes groupes {{ bands|length }} :</p>
-        <ul>
-            {% for b in bands %} <!-- For dans le html -->
-            <li>{{ b.name|upper }}</li>
-            {% endfor %}
-        </ul>
+{% block content %} <!-- Début du bloc qui sera ajouté à la base -->
 
-        <br>
+<h1>Hello Django !</h1>
 
-        <p> J'ai                        <!-- If dans le html -->                
-            {% if bands|length < 5 %}
-                peu de
-            {% elif bands|length < 10 %}
-                quelques
-            {% else %}
-                beaucoup de
-            {% endif %}
-                groupes préférés.
-        </p>
-    </body>
-</html>
+<p>Mes groupes {{ bands|length }} :</p>
+<ul>
+    {% for b in bands %} <!-- For dans le html -->
+    <li>{{ b.name|upper }}</li>
+    {% endfor %}
+</ul>
+
+<br>
+
+<p> J'ai                        <!-- If dans le html -->                
+    {% if bands|length < 5 %}
+        peu de
+    {% elif bands|length < 10 %}
+        quelques
+    {% else %}
+        beaucoup de
+    {% endif %}
+        groupes préférés.
+</p>
+
+{% endblock %} <!-- Fin du bloc -->
