--- a/merchex/listings/templates/listings/listings.html
+++ b/merchex/listings/templates/listings/listings.html
@@ -1,11 +1,12 @@
-<html>
-    <head><title>Merchex</title></head>
-    <body>
+{% extends 'listings/base.html' %} <!-- Fait en sorte que ce template hérite du template de base -->
+
+{% block content %} <!-- Début du bloc qui sera ajouté à la base -->
+
         <h1>Affiches ({{ listings|length }} affiches) :</h1>
         <ul>
             {% for listing in listings %} <!-- For dans le html -->
             <li>{{ listing.title }}</li>
             {% endfor %}
         </ul>
-    </body>
-</html>
+
+{% endblock %}
