P4.2: Création d'un formulaire et page de redirection

--- a/merchex/listings/templates/listings/base.html
+++ b/merchex/listings/templates/listings/base.html
@@ -11,6 +11,8 @@
         <nav>
             <a href="{% url 'band-list' %}">Groupes</a>
             <a href="{% url 'listing-list' %}">Annonces</a>
+            <a href="{% url 'contact' %}">Nous contacter</a>
+            <a href="{% url 'about' %}">A propos</a>
         </nav>
 
         {% block content %}{% endblock %} <!-- Où sera le code HTML qui héritera de la base -->
