--- a/merchex/listings/templates/listings/contact.html
+++ b/merchex/listings/templates/listings/contact.html
@@ -2,6 +2,14 @@
 
 {% block content %} <!-- Début du bloc qui sera ajouté à la base -->
 
-        <h1>Formulaire de contact</h1>
+<h1>Formulaire de contact</h1>
+
+<p>Nous sommes là pour vous aider.</p>
+
+<form action="" method="post" novalidate>
+{% csrf_token %}
+{{ form.as_p }}
+<input type="submit" value="Envoyer">
+</form>
 
 {% endblock %}
