P4.4 : Opérations de mises à jour des objets

--- a/merchex/listings/templates/listings/band_detail.html
+++ b/merchex/listings/templates/listings/band_detail.html
@@ -2,6 +2,8 @@
 
 {% block content %} <!-- Début du bloc qui sera ajouté à la base -->
 
+<br>
+<a href="{% url 'band-update' band.id %}">Modifier</a>
 
 <h2>{{ band.name }}</h2>
 
