--- a/merchex/listings/templates/listings/listing_detail.html
+++ b/merchex/listings/templates/listings/listing_detail.html
@@ -2,6 +2,9 @@
 
 {% block content %} <!-- Début du bloc qui sera ajouté à la base -->
 
+<br>
+<a href="{% url 'listing-update' listing.id %}">Modifier</a>
+
 <h2>{{ listing.title }}</h2>
 
 <ul>
