P4.5 : Opérations de suppression des objets

--- a/merchex/listings/templates/listings/band_detail.html
+++ b/merchex/listings/templates/listings/band_detail.html
@@ -4,6 +4,7 @@
 
 <br>
 <a href="{% url 'band-update' band.id %}">Modifier</a>
+<a href="{% url 'band-delete' band.id %}">Supprimer</a>
 
 <h2>{{ band.name }}</h2>
 
