--- a/merchex/listings/templates/listings/listing_detail.html
+++ b/merchex/listings/templates/listings/listing_detail.html
@@ -4,6 +4,7 @@
 
 <br>
 <a href="{% url 'listing-update' listing.id %}">Modifier</a>
+<a href="{% url 'listing-delete' listing.id %}">Supprimer</a>
 
 <h2>{{ listing.title }}</h2>
 
